qt6/multimedia/gen_qmediaplayer.nim


proc fcQMediaPlayer_new(): ptr cQMediaPlayer {.importc: "QMediaPlayer_new".}
proc fcQMediaPlayer_new2(parent: pointer): ptr cQMediaPlayer {.importc: "QMediaPlayer_new2".}
proc fcQMediaPlayer_metaObject(self: pointer, ): pointer {.importc: "QMediaPlayer_metaObject".}
proc fcQMediaPlayer_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaPlayer_metacast".}
proc fcQMediaPlayer_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaPlayer_metacall".}
proc fcQMediaPlayer_tr(s: cstring): struct_miqt_string {.importc: "QMediaPlayer_tr".}
proc fcQMediaPlayer_audioTracks(self: pointer, ): struct_miqt_array {.importc: "QMediaPlayer_audioTracks".}
proc fcQMediaPlayer_videoTracks(self: pointer, ): struct_miqt_array {.importc: "QMediaPlayer_videoTracks".}
proc fcQMediaPlayer_subtitleTracks(self: pointer, ): struct_miqt_array {.importc: "QMediaPlayer_subtitleTracks".}
proc fcQMediaPlayer_activeAudioTrack(self: pointer, ): cint {.importc: "QMediaPlayer_activeAudioTrack".}
proc fcQMediaPlayer_activeVideoTrack(self: pointer, ): cint {.importc: "QMediaPlayer_activeVideoTrack".}
proc fcQMediaPlayer_activeSubtitleTrack(self: pointer, ): cint {.importc: "QMediaPlayer_activeSubtitleTrack".}
proc fcQMediaPlayer_setActiveAudioTrack(self: pointer, index: cint): void {.importc: "QMediaPlayer_setActiveAudioTrack".}
proc fcQMediaPlayer_setActiveVideoTrack(self: pointer, index: cint): void {.importc: "QMediaPlayer_setActiveVideoTrack".}
proc fcQMediaPlayer_setActiveSubtitleTrack(self: pointer, index: cint): void {.importc: "QMediaPlayer_setActiveSubtitleTrack".}
proc fcQMediaPlayer_setAudioOutput(self: pointer, output: pointer): void {.importc: "QMediaPlayer_setAudioOutput".}
proc fcQMediaPlayer_audioOutput(self: pointer, ): pointer {.importc: "QMediaPlayer_audioOutput".}
proc fcQMediaPlayer_setVideoOutput(self: pointer, videoOutput: pointer): void {.importc: "QMediaPlayer_setVideoOutput".}
proc fcQMediaPlayer_videoOutput(self: pointer, ): pointer {.importc: "QMediaPlayer_videoOutput".}
proc fcQMediaPlayer_setVideoSink(self: pointer, sink: pointer): void {.importc: "QMediaPlayer_setVideoSink".}
proc fcQMediaPlayer_videoSink(self: pointer, ): pointer {.importc: "QMediaPlayer_videoSink".}
proc fcQMediaPlayer_source(self: pointer, ): pointer {.importc: "QMediaPlayer_source".}
proc fcQMediaPlayer_sourceDevice(self: pointer, ): pointer {.importc: "QMediaPlayer_sourceDevice".}
proc fcQMediaPlayer_playbackState(self: pointer, ): cint {.importc: "QMediaPlayer_playbackState".}
proc fcQMediaPlayer_mediaStatus(self: pointer, ): cint {.importc: "QMediaPlayer_mediaStatus".}
proc fcQMediaPlayer_duration(self: pointer, ): clonglong {.importc: "QMediaPlayer_duration".}
proc fcQMediaPlayer_position(self: pointer, ): clonglong {.importc: "QMediaPlayer_position".}
proc fcQMediaPlayer_hasAudio(self: pointer, ): bool {.importc: "QMediaPlayer_hasAudio".}
proc fcQMediaPlayer_hasVideo(self: pointer, ): bool {.importc: "QMediaPlayer_hasVideo".}
proc fcQMediaPlayer_bufferProgress(self: pointer, ): float32 {.importc: "QMediaPlayer_bufferProgress".}
proc fcQMediaPlayer_bufferedTimeRange(self: pointer, ): pointer {.importc: "QMediaPlayer_bufferedTimeRange".}
proc fcQMediaPlayer_isSeekable(self: pointer, ): bool {.importc: "QMediaPlayer_isSeekable".}
proc fcQMediaPlayer_playbackRate(self: pointer, ): float64 {.importc: "QMediaPlayer_playbackRate".}
proc fcQMediaPlayer_loops(self: pointer, ): cint {.importc: "QMediaPlayer_loops".}
proc fcQMediaPlayer_setLoops(self: pointer, loops: cint): void {.importc: "QMediaPlayer_setLoops".}
proc fcQMediaPlayer_error(self: pointer, ): cint {.importc: "QMediaPlayer_error".}
proc fcQMediaPlayer_errorString(self: pointer, ): struct_miqt_string {.importc: "QMediaPlayer_errorString".}
proc fcQMediaPlayer_isAvailable(self: pointer, ): bool {.importc: "QMediaPlayer_isAvailable".}
proc fcQMediaPlayer_metaData(self: pointer, ): pointer {.importc: "QMediaPlayer_metaData".}
proc fcQMediaPlayer_play(self: pointer, ): void {.importc: "QMediaPlayer_play".}
proc fcQMediaPlayer_pause(self: pointer, ): void {.importc: "QMediaPlayer_pause".}
proc fcQMediaPlayer_stop(self: pointer, ): void {.importc: "QMediaPlayer_stop".}
proc fcQMediaPlayer_setPosition(self: pointer, position: clonglong): void {.importc: "QMediaPlayer_setPosition".}
proc fcQMediaPlayer_setPlaybackRate(self: pointer, rate: float64): void {.importc: "QMediaPlayer_setPlaybackRate".}
proc fcQMediaPlayer_setSource(self: pointer, source: pointer): void {.importc: "QMediaPlayer_setSource".}
proc fcQMediaPlayer_setSourceDevice(self: pointer, device: pointer): void {.importc: "QMediaPlayer_setSourceDevice".}
proc fcQMediaPlayer_sourceChanged(self: pointer, media: pointer): void {.importc: "QMediaPlayer_sourceChanged".}
proc fQMediaPlayer_connect_sourceChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_sourceChanged".}
proc fcQMediaPlayer_playbackStateChanged(self: pointer, newState: cint): void {.importc: "QMediaPlayer_playbackStateChanged".}
proc fQMediaPlayer_connect_playbackStateChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_playbackStateChanged".}
proc fcQMediaPlayer_mediaStatusChanged(self: pointer, status: cint): void {.importc: "QMediaPlayer_mediaStatusChanged".}
proc fQMediaPlayer_connect_mediaStatusChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_mediaStatusChanged".}
proc fcQMediaPlayer_durationChanged(self: pointer, duration: clonglong): void {.importc: "QMediaPlayer_durationChanged".}
proc fQMediaPlayer_connect_durationChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_durationChanged".}
proc fcQMediaPlayer_positionChanged(self: pointer, position: clonglong): void {.importc: "QMediaPlayer_positionChanged".}
proc fQMediaPlayer_connect_positionChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_positionChanged".}
proc fcQMediaPlayer_hasAudioChanged(self: pointer, available: bool): void {.importc: "QMediaPlayer_hasAudioChanged".}
proc fQMediaPlayer_connect_hasAudioChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_hasAudioChanged".}
proc fcQMediaPlayer_hasVideoChanged(self: pointer, videoAvailable: bool): void {.importc: "QMediaPlayer_hasVideoChanged".}
proc fQMediaPlayer_connect_hasVideoChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_hasVideoChanged".}
proc fcQMediaPlayer_bufferProgressChanged(self: pointer, progress: float32): void {.importc: "QMediaPlayer_bufferProgressChanged".}
proc fQMediaPlayer_connect_bufferProgressChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_bufferProgressChanged".}
proc fcQMediaPlayer_seekableChanged(self: pointer, seekable: bool): void {.importc: "QMediaPlayer_seekableChanged".}
proc fQMediaPlayer_connect_seekableChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_seekableChanged".}
proc fcQMediaPlayer_playbackRateChanged(self: pointer, rate: float64): void {.importc: "QMediaPlayer_playbackRateChanged".}
proc fQMediaPlayer_connect_playbackRateChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_playbackRateChanged".}
proc fcQMediaPlayer_loopsChanged(self: pointer, ): void {.importc: "QMediaPlayer_loopsChanged".}
proc fQMediaPlayer_connect_loopsChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_loopsChanged".}
proc fcQMediaPlayer_metaDataChanged(self: pointer, ): void {.importc: "QMediaPlayer_metaDataChanged".}
proc fQMediaPlayer_connect_metaDataChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_metaDataChanged".}
proc fcQMediaPlayer_videoOutputChanged(self: pointer, ): void {.importc: "QMediaPlayer_videoOutputChanged".}
proc fQMediaPlayer_connect_videoOutputChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_videoOutputChanged".}
proc fcQMediaPlayer_audioOutputChanged(self: pointer, ): void {.importc: "QMediaPlayer_audioOutputChanged".}
proc fQMediaPlayer_connect_audioOutputChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_audioOutputChanged".}
proc fcQMediaPlayer_tracksChanged(self: pointer, ): void {.importc: "QMediaPlayer_tracksChanged".}
proc fQMediaPlayer_connect_tracksChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_tracksChanged".}
proc fcQMediaPlayer_activeTracksChanged(self: pointer, ): void {.importc: "QMediaPlayer_activeTracksChanged".}
proc fQMediaPlayer_connect_activeTracksChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_activeTracksChanged".}
proc fcQMediaPlayer_errorChanged(self: pointer, ): void {.importc: "QMediaPlayer_errorChanged".}
proc fQMediaPlayer_connect_errorChanged(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_errorChanged".}
proc fcQMediaPlayer_errorOccurred(self: pointer, error: cint, errorString: struct_miqt_string): void {.importc: "QMediaPlayer_errorOccurred".}
proc fQMediaPlayer_connect_errorOccurred(self: pointer, slot: int) {.importc: "QMediaPlayer_connect_errorOccurred".}
proc fcQMediaPlayer_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlayer_tr2".}
proc fcQMediaPlayer_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlayer_tr3".}
proc fcQMediaPlayer_setSourceDevice2(self: pointer, device: pointer, sourceUrl: pointer): void {.importc: "QMediaPlayer_setSourceDevice2".}
proc fQMediaPlayer_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QMediaPlayer_virtualbase_metaObject".}
proc fcQMediaPlayer_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metaObject".}
proc fQMediaPlayer_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QMediaPlayer_virtualbase_metacast".}
proc fcQMediaPlayer_override_virtual_metacast(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metacast".}
proc fQMediaPlayer_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMediaPlayer_virtualbase_metacall".}
proc fcQMediaPlayer_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_metacall".}
proc fQMediaPlayer_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_event".}
proc fcQMediaPlayer_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_event".}
proc fQMediaPlayer_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_eventFilter".}
proc fcQMediaPlayer_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_eventFilter".}
proc fQMediaPlayer_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_timerEvent".}
proc fcQMediaPlayer_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_timerEvent".}
proc fQMediaPlayer_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_childEvent".}
proc fcQMediaPlayer_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_childEvent".}
proc fQMediaPlayer_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_customEvent".}
proc fcQMediaPlayer_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_customEvent".}
proc fQMediaPlayer_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_connectNotify".}
proc fcQMediaPlayer_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_connectNotify".}
proc fQMediaPlayer_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_disconnectNotify".}
proc fcQMediaPlayer_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_disconnectNotify".}
